update is ready